Add artist create route
